--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crud-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon src/main.js"
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
